[tool.poetry]
name = "music-bot"
version = "0.1.0"
description = "Музыкальный Discord бот с поддержкой Wavelink"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
"discord.py" = "^2.0.0"
python-dotenv = "^0.19.0"
wavelink = "^2.6.1"
PyNaCl = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 